--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 					<div class="card course-work">
 						<h2>Course Work</h2>
 						<ul>
-							<li>1</li>
-							<li>2</li>
-							<li>3</li>
+							<li></li>
+							<li></li>
+							<li></li>
 						</ul>
 					</div>
 				</div>
@@ -85,14 +85,7 @@
 						<button id="wdd"><span>WDD</span></button>
 					</div>
 				</div>
-				<div class="course-grid">
-					<div class="course cse">CSE 110</div>
-					<div class="course wdd">WDD 130</div>
-					<div class="course cse">CSE 111</div>
-					<div class="course cse">CSE 210</div>
-					<div class="course wdd">WDD 131</div>
-					<div class="course wdd">WDD 231</div>
-				</div>
+				<div class="course-grid"></div>
 			</section>
 		</main>
 
