--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>wdd231 Felix Flores website</title>
-		<meta name="description" content="" />
+		<title>Felix Flores | WDD 231 Web Development Portfolio & Projects</title>
+		<meta
+			name="description"
+			content="Portfolio showcasing Felix Flores' web development coursework, projects, and certifications. Explore front-end development projects and programming achievements from BYU-Idaho's WDD 231 course."
+		/>
 		<meta name="author" content="Felix Flores" />
 		<link rel="stylesheet" href="styles/normalize.css" />
 		<link rel="stylesheet" href="styles/base.css" />
