--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
 			rel="stylesheet"
 		/>
+		<link rel="icon" href="katana.ico" type="image/x-icon" />
 		<script src="scripts/base.js" type="text/javascript" defer></script>
 	</head>
 	<body>
