add og and twitter

--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
 			content="Portfolio showcasing Felix Flores' web development coursework, projects, and certifications. Explore front-end development projects and programming achievements from BYU-Idaho's WDD 231 course."
 		/>
 		<meta name="author" content="Felix Flores" />
+		<meta property="og:type" content="website" />
+		<meta
+			property="og:title"
+			content="Felix Flores | WDD 231 Web Development Portfolio & Projects"
+		/>
+		<meta
+			property="og:description"
+			content="Explore front-end development projects and certifications from BYU-Idaho's WDD 231 course"
+		/>
+		<meta
+			property="og:image"
+			content="https://flixjavier.github.io/wdd231/images/profile_photo.webp"
+		/>
+		<meta property="og:url" content="https://flixjavier.github.io/wdd231/" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta
+			name="twitter:title"
+			content="Felix Flores | WDD 231 Web Development Portfolio & Projects"
+		/>
+		<meta name="twitter:image" content="your-image.jpg" />
 		<link rel="stylesheet" href="styles/normalize.css" />
 		<link rel="stylesheet" href="styles/base.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
