--- a/index.html
+++ b/index.html
@@ -23,12 +23,18 @@
 			content="https://flixjavier.github.io/wdd231/images/profile_photo.webp"
 		/>
 		<meta property="og:url" content="https://flixjavier.github.io/wdd231/" />
-		<meta name="twitter:card" content="summary_large_image" />
+		<meta
+			name="twitter:card"
+			content="https://flixjavier.github.io/wdd231/images/profile_photo.webp"
+		/>
 		<meta
 			name="twitter:title"
 			content="Felix Flores | WDD 231 Web Development Portfolio & Projects"
 		/>
-		<meta name="twitter:image" content="your-image.jpg" />
+		<meta
+			name="twitter:image"
+			content="https://flixjavier.github.io/wdd231/images/profile_photo.webp"
+		/>
 		<link rel="stylesheet" href="styles/normalize.css" />
 		<link rel="stylesheet" href="styles/base.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
