--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -45,7 +45,7 @@
 	<body>
 		<header>
 			<section>
-				<img src="images/logo.svg" alt="Logo" width="44" height="auto" />
+				<img src="images/logo.svg" alt="Logo" width="44" height="44" />
 				<div>
 					<h1>Casas Grandes</h1>
 					<span>Chamber of Commerce</span>
