--- a/chamber/index.html
+++ b/chamber/index.html
@@ -54,20 +54,77 @@
 		</header>
 		<nav id="animateme">
 			<ul class="menuLinks">
-				<li><a href="#" title="Home">Home</a></li>
-				<li class="current-menu-item">
-					<a href="#" title="Directory">Directory</a>
+				<li class="current-menu-item"><a href="#" title="Home">Home</a></li>
+				<li>
+					<a
+						href="https://flixjavier.github.io/wdd231/chamber/directory.html"
+						title="Directory"
+						>Directory</a
+					>
 				</li>
 				<li><a href="#" title="Join">Join</a></li>
 				<li><a href="#" title="Discover">Discover</a></li>
 			</ul>
 		</nav>
 		<main>
-			<div class="menu">
-				<button id="grid" data-view="grid">Grid View</button>
-				<button id="list" data-view="list">List View</button>
-			</div>
-			<div id="cards" class="grid"></div>
+			<section class="hero">
+				<img
+					src="images/casas_grandes_letras.webp"
+					alt="Casas Grandes Hero Image"
+					loading="lazy"
+				/>
+				<button class="cta-button">Keynote Tickets</button>
+			</section>
+
+			<h2>Home</h2>
+
+			<section class="info-panels">
+				<div class="panel events">
+					<h3>Events</h3>
+					<p>Upcoming events will be displayed here.</p>
+				</div>
+				<div class="panel current-weather">
+					<h3>Current Weather</h3>
+					<p>
+						75°F<br />Partly Cloudy<br />High: 85° Low: 52°<br />Humidity:
+						34%<br />Sunrise: 7:30am<br />Sunset: 9:59pm
+					</p>
+				</div>
+				<div class="panel weather-forecast">
+					<h3>Weather Forecast</h3>
+					<p>
+						Today: <strong>90°F</strong><br />Wednesday: <strong>89°F</strong
+						><br />Thursday: <strong>68°F</strong>
+					</p>
+				</div>
+			</section>
+
+			<section class="business-cards">
+				<div class="business-card">
+					<img src="images/business1.jpg" alt="Business Logo" />
+					<h4>Business Name</h4>
+					<p class="tagline">Business Tag Line</p>
+					<p><strong>Email:</strong> info@gmail.com</p>
+					<p><strong>Phone:</strong> 800-555-1234</p>
+					<p><strong>URL:</strong> mybusiness.com</p>
+				</div>
+				<div class="business-card">
+					<img src="images/business2.jpg" alt="Business Logo" />
+					<h4>Business Name</h4>
+					<p class="tagline">Business Tag Line</p>
+					<p><strong>Email:</strong> info@gmail.com</p>
+					<p><strong>Phone:</strong> 800-555-1234</p>
+					<p><strong>URL:</strong> mybusiness.com</p>
+				</div>
+				<div class="business-card">
+					<img src="images/business3.jpg" alt="Business Logo" />
+					<h4>Business Name</h4>
+					<p class="tagline">Business Tag Line</p>
+					<p><strong>Email:</strong> info@gmail.com</p>
+					<p><strong>Phone:</strong> 800-555-1234</p>
+					<p><strong>URL:</strong> mybusiness.com</p>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<section class="footer-info"></section>
