--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -41,7 +41,7 @@
 			rel="stylesheet"
 		/>
 		<link rel="icon" href="images/casas_grandes_icon.ico" type="image/x-icon" />
-		<script src="scripts/base.js" type="text/javascript" defer></script>
+		<script src="scripts/base.mjs" type="module" defer></script>
 	</head>
 	<body>
 		<header>
