--- a/chamber/index.html
+++ b/chamber/index.html
@@ -88,6 +88,9 @@
 					<img id="graphic" src="" alt="" />
 					<p id="description"></p>
 					<p id="temperature"></p>
+					<p id="humidity"></p>
+					<p id="sunrise"></p>
+					<p id="sunset"></p>
 				</div>
 				<div class="panel weather-forecast">
 					<h3>Weather Forecast</h3>
