--- a/chamber/index.html
+++ b/chamber/index.html
@@ -80,8 +80,8 @@
 
 			<section class="info-panels">
 				<div class="panel events">
-					<h3></h3>
-					<p></p>
+					<h3>Events</h3>
+					<p id="events"></p>
 				</div>
 				<div class="card panel">
 					<h3 id="town"></h3>
