--- a/chamber/index.html
+++ b/chamber/index.html
@@ -76,7 +76,7 @@
 				<button class="cta-button">Keynote Tickets</button>
 			</section>
 
-			<h2>Home</h2>
+			<h1>Home</h1>
 
 			<section class="info-panels">
 				<div class="panel events">
@@ -101,6 +101,7 @@
 		</main>
 		<footer class="footer">
 			<section class="footer-info"></section>
+			<div class="social-icons"></div>
 			<div class="footer-right">
 				<p id="current-year"></p>
 				<p id="lastModified"></p>
