--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -77,6 +77,7 @@
 		</main>
 		<footer class="footer">
 			<section class="footer-info"></section>
+			<div class="social-icons"></div>
 			<div class="footer-right">
 				<p id="current-year"></p>
 				<p id="lastModified"></p>
