--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -42,6 +42,7 @@
 		/>
 		<link rel="icon" href="images/casas_grandes_icon.ico" type="image/x-icon" />
 		<script src="scripts/base.mjs" type="module" defer></script>
+		<script src="scripts/display_cards.mjs" type="module" defer></script>
 	</head>
 	<body>
 		<header>
