--- a/chamber/index.html
+++ b/chamber/index.html
@@ -50,7 +50,7 @@
 				<h1>Casas Grandes</h1>
 				<span>Chamber of Commerce</span>
 			</div>
-			<button id="myButton"></button>
+			<button id="myButton" aria-label="Open navigation menu"></button>
 		</header>
 		<nav id="animateme">
 			<ul class="menuLinks">
