--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -41,8 +41,8 @@
 			rel="stylesheet"
 		/>
 		<link rel="icon" href="images/casas_grandes_icon.ico" type="image/x-icon" />
-		<script src="scripts/base.mjs" type="module" defer></script>
-		<script src="scripts/display_cards.mjs" type="module" defer></script>
+		<script src="scripts/base.mjs" type="module"></script>
+		<script src="scripts/display_cards.mjs" type="module"></script>
 	</head>
 	<body>
 		<header>
