--- a/chamber/index.html
+++ b/chamber/index.html
@@ -83,7 +83,7 @@
 				</div>
 				<div class="card panel">
 					<h3 id="town"></h3>
-					<img id="graphic" />
+					<img id="graphic" src="" alt="" />
 					<p id="description"></p>
 					<p id="temperature"></p>
 					<p id="humidity"></p>
