--- a/chamber/index.html
+++ b/chamber/index.html
@@ -6,28 +6,28 @@
 		<title>Casas Grandes | Chamber</title>
 		<meta
 			name="description"
-			content="Webpage Chamber of Commerce of Casas Grandes City. Explore the culture and the magic place of this great place"
+			content="Webpage Chamber of Commerce of Casas Grandes City. Explore the culture and the magic of this great place"
 		/>
 		<meta name="author" content="Felix Flores" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Casas Grandes | Chamber" />
 		<meta
 			property="og:description"
-			content="Webpage Chamber of Commerce of Casas Grandes City. Explore the culture and the magic place of this great place"
+			content="Webpage Chamber of Commerce of Casas Grandes City. Explore the culture and the magic representation of this great place"
 		/>
 		<meta
 			property="og:image"
-			content="https://flixjavier.github.io/wdd231/images/profile_photo.webp"
+			content="https://flixjavier.github.io/wdd231/chamber/index.html"
 		/>
 		<meta property="og:url" content="https://flixjavier.github.io/wdd231/" />
 		<meta
 			name="twitter:card"
-			content="https://flixjavier.github.io/wdd231/images/profile_photo.webp"
+			content="https://flixjavier.github.io/wdd231/chamber/index.html"
 		/>
 		<meta name="twitter:title" content="Casas Grandes | Chamber" />
 		<meta
 			name="twitter:image"
-			content="https://flixjavier.github.io/wdd231/images/profile_photo.webp"
+			content="https://flixjavier.github.io/wdd231/chamber/index.html"
 		/>
 		<link rel="stylesheet" href="styles/normalize.css" />
 		<link rel="stylesheet" href="styles/small.css" />
