--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -55,17 +55,21 @@
 		</header>
 		<nav id="animateme">
 			<ul class="menuLinks">
+				<li class="current-menu-item"><a href="#" title="Home">Home</a></li>
+				<li>
+					<a
+						href="https://flixjavier.github.io/wdd231/chamber/directory.html"
+						title="Directory"
+						>Directory</a
+					>
+				</li>
 				<li>
 					<a
 						href="https://flixjavier.github.io/wdd231/chamber/index.html"
-						title="Home"
-						>Home</a
+						title="Join"
+						>Join</a
 					>
 				</li>
-				<li class="current-menu-item">
-					<a href="#" title="Directory">Directory</a>
-				</li>
-				<li><a href="#" title="Join">Join</a></li>
 				<li><a href="#" title="Discover">Discover</a></li>
 			</ul>
 		</nav>
