--- a/chamber/index.html
+++ b/chamber/index.html
@@ -62,7 +62,13 @@
 						>Directory</a
 					>
 				</li>
-				<li><a href="#" title="Join">Join</a></li>
+				<li>
+					<a
+						href="https://flixjavier.github.io/wdd231/chamber/index.html"
+						title="Join"
+						>Join</a
+					>
+				</li>
 				<li><a href="#" title="Discover">Discover</a></li>
 			</ul>
 		</nav>
