--- a/chamber/index.html
+++ b/chamber/index.html
@@ -81,7 +81,7 @@
 				/>
 				<button class="cta-button">Keynote Tickets</button>
 			</section>
-			<h1>Home</h1>
+			<h1>Chamber of Commerce of Casas Grandes</h1>
 			<section class="info-panels">
 				<div class="panel events">
 					<h3>Events</h3>
