--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -55,7 +55,13 @@
 		</header>
 		<nav id="animateme">
 			<ul class="menuLinks">
-				<li class="current-menu-item"><a href="#" title="Home">Home</a></li>
+				<li class="current-menu-item">
+					<a
+						href="https://flixjavier.github.io/wdd231/chamber/index.html"
+						title="Home"
+						>Home</a
+					>
+				</li>
 				<li>
 					<a
 						href="https://flixjavier.github.io/wdd231/chamber/directory.html"
