--- a/chamber/index.html
+++ b/chamber/index.html
@@ -54,7 +54,13 @@
 		</header>
 		<nav id="animateme">
 			<ul class="menuLinks">
-				<li class="current-menu-item"><a href="#" title="Home">Home</a></li>
+				<li class="current-menu-item">
+					<a
+						href="https://flixjavier.github.io/wdd231/chamber/index.html"
+						title="Home"
+						>Home</a
+					>
+				</li>
 				<li>
 					<a
 						href="https://flixjavier.github.io/wdd231/chamber/directory.html"
@@ -69,7 +75,13 @@
 						>Join</a
 					>
 				</li>
-				<li><a href="#" title="Discover">Discover</a></li>
+				<li>
+					<a
+						href="https://flixjavier.github.io/wdd231/chamber/index.html"
+						title="Discover"
+						>Discover</a
+					>
+				</li>
 			</ul>
 		</nav>
 		<main>
