--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
 			<nav class="navbar">
 				<ul id="menu">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="#">Chamber</a></li>
+					<li>
+						<a href="https://flixjavier.github.io/wdd231/chamber/index.html"
+							>Chamber</a
+						>
+					</li>
 					<li><a href="#">Final</a></li>
 					<li><a href="https://github.com/flixjavier">GitHub Profile</a></li>
 					<li>
