--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,46 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
+		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Casas Grandes | Chamber</title>
 		<meta
 			name="description"
-			content="Webpage Chamber of Commerce of Casas Grandes City. Explore the culture and the magic of this great place"
-		/>
-		<meta name="author" content="Felix Flores" />
-		<meta property="og:type" content="website" />
-		<meta property="og:title" content="Casas Grandes | Chamber" />
+			content="Webpage Chamber of Commerce of Casas Grandes City. Explore the culture and the magic of this great place">
+		<meta name="author" content="Felix Flores">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Casas Grandes | Chamber">
 		<meta
 			property="og:description"
-			content="Webpage Chamber of Commerce of Casas Grandes City. Explore the culture and the magic representation of this great place"
-		/>
+			content="Webpage Chamber of Commerce of Casas Grandes City. Explore the culture and the magic representation of this great place">
 		<meta
 			property="og:image"
-			content="https://flixjavier.github.io/wdd231/chamber/index.html"
-		/>
-		<meta property="og:url" content="https://flixjavier.github.io/wdd231/" />
+			content="https://flixjavier.github.io/wdd231/chamber/index.html">
+		<meta property="og:url" content="https://flixjavier.github.io/wdd231/">
 		<meta
 			name="twitter:card"
-			content="https://flixjavier.github.io/wdd231/chamber/index.html"
-		/>
-		<meta name="twitter:title" content="Casas Grandes | Chamber" />
+			content="https://flixjavier.github.io/wdd231/chamber/index.html">
+		<meta name="twitter:title" content="Casas Grandes | Chamber">
 		<meta
 			name="twitter:image"
-			content="https://flixjavier.github.io/wdd231/chamber/index.html"
-		/>
-		<link rel="stylesheet" href="styles/normalize.css" />
-		<link rel="stylesheet" href="styles/small.css" />
-		<link rel="stylesheet" href="styles/large.css" />
+			content="https://flixjavier.github.io/wdd231/chamber/index.html">
+		<link rel="stylesheet" href="styles/normalize.css">
+		<link rel="stylesheet" href="styles/small.css">
+		<link rel="stylesheet" href="styles/large.css">
 
 		<!-- ADD FONTS -->
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link
 			href="https://fonts.googleapis.com/css2?family=Lobster&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-			rel="stylesheet"
-		/>
-		<link rel="icon" href="images/casas_grandes_icon.ico" type="image/x-icon" />
+			rel="stylesheet">
+		<link rel="icon" href="images/casas_grandes_icon.ico" type="image/x-icon">
 		<script src="scripts/base.mjs" type="module"></script>
 	</head>
 	<body>
