--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -15,15 +15,15 @@
 			content="Webpage Chamber of Commerce of Casas Grandes City. Explore the culture and the magic representation of this great place">
 		<meta
 			property="og:image"
-			content="https://flixjavier.github.io/wdd231/chamber/index.html">
+			content="https://flixjavier.github.io/wdd231/chamber/directory.html">
 		<meta property="og:url" content="https://flixjavier.github.io/wdd231/">
 		<meta
 			name="twitter:card"
-			content="https://flixjavier.github.io/wdd231/chamber/index.html">
+			content="https://flixjavier.github.io/wdd231/chamber/directory.html">
 		<meta name="twitter:title" content="Casas Grandes | Chamber" />
 		<meta
 			name="twitter:image"
-			content="https://flixjavier.github.io/wdd231/chamber/index.html">
+			content="https://flixjavier.github.io/wdd231/chamber/directory.html">
 		<link rel="stylesheet" href="styles/normalize.css">
 		<link rel="stylesheet" href="styles/small.css">
 		<link rel="stylesheet" href="styles/large.css">
@@ -40,7 +40,7 @@
 	</head>
 	<body>
 		<header>
-			<img src="images/logo.svg" alt="Logo" width="44" height="44" />
+			<img src="images/logo.svg" alt="Logo" width="44" height="44">
 			<div>
 				<h1>Casas Grandes</h1>
 				<span>Chamber of Commerce</span>
