--- a/chamber/index.html
+++ b/chamber/index.html
@@ -15,8 +15,8 @@
 			content="Webpage Chamber of Commerce of Casas Grandes City. Explore the culture and the magic representation of this great place">
 		<meta
 			property="og:image"
-			content="images/casas_grandes_letras.webp">
-		<meta property="og:url" content="https://flixjavier.github.io/wdd231/">
+			content="https://flixjavier.github.io/wdd231/chamber/index.html">
+		<meta property="og:url" content="https://flixjavier.github.io/wdd231/chamber/index.html">
 		<meta
 			name="twitter:card"
 			content="https://flixjavier.github.io/wdd231/chamber/index.html">
