--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 					</div>
 				</div>
 				<div class="course-grid"></div>
+				<dialog id="course-details"></dialog>
 			</section>
 		</main>
 
