--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -65,12 +65,12 @@
 				</li>
 				<li>
 					<a
-						href="https://flixjavier.github.io/wdd231/chamber/index.html"
+						href="https://flixjavier.github.io/wdd231/chamber/join.html"
 						title="Join"
 						>Join</a
 					>
 				</li>
-				<li><a href="#" title="Discover">Discover</a></li>
+				<li><a href="https://flixjavier.github.io/wdd231/chamber/index.html" title="Discover">Discover</a></li>
 			</ul>
 		</nav>
 		<main>
