--- a/chamber/index.html
+++ b/chamber/index.html
@@ -64,7 +64,7 @@
 				</li>
 				<li>
 					<a
-						href="https://flixjavier.github.io/wdd231/chamber/index.html"
+						href="https://flixjavier.github.io/wdd231/chamber/join.html"
 						title="Join"
 						>Join</a
 					>
