--- a/chamber/join.html
+++ b/chamber/join.html
@@ -216,7 +216,7 @@
                 <input type="hidden" name="timestamp" id="timestamp">
                 
                 <button type="submit" class="btn-submit">
-                    <i class="fas fa-paper-plane"></i> Submit Application
+                    <i class="fas fa-paper-plane"></i> Send Application
                 </button>
                 
                 <p class="form-note">By submitting this form, you agree to our <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a>.</p>
