--- a/chamber/join.html
+++ b/chamber/join.html
@@ -108,8 +108,8 @@
 					<h3><i class="fas fa-info-circle"></i> Application Information</h3>
 					<p>
 						Please complete all required fields marked with
-						<span>*</span>. We'll review your application
-						and contact you within 3 business days.
+						<span>*</span>. We'll review your application and contact you within
+						3 business days.
 					</p>
 				</div>
 
@@ -294,6 +294,7 @@
 								</label>
 							</div>
 						</div>
+						<h3>More Info</h3>
 						<div id="showHere"></div>
 
 						<!-- One single dialog for all temples -->
