--- a/chamber/join.html
+++ b/chamber/join.html
@@ -51,7 +51,7 @@
 		/>
 		<link rel="icon" href="images/casas_grandes_icon.ico" type="image/x-icon" />
 		<script src="scripts/base.mjs" type="module"></script>
-		<script src="scripts/form.mjs" type="module" defer></script>
+		<script src="scripts/form.mjs" type="module"></script>
 	</head>
 	<body>
 		<header>
