--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -39,7 +39,7 @@
 			rel="stylesheet">
 		<link rel="icon" href="images/casas_grandes_icon.ico" type="image/x-icon">
 		<script src="scripts/base.mjs" type="module"></script>
-    <script src="scripts/form.mjs" type="module" defer></script>
+    <script src="scripts/form.mjs" type="module"></script>
 	</head>
 	<body>
 		<header>
