--- a/chamber/join.html
+++ b/chamber/join.html
@@ -253,44 +253,44 @@
 							<div class="radio-option">
 								<label>
 									<input type="radio" name="membership" value="NP" required />
-									<div>
+									<section>
 										<strong>NP Membership</strong>
 										<div class="membership-feature">No cost membership</div>
-									</div>
+									</section>
 								</label>
 							</div>
 
 							<div class="radio-option">
 								<label>
 									<input type="radio" name="membership" value="Bronze" />
-									<div>
+									<section>
 										<strong>Bronze Membership</strong>
 										<div class="membership-feature">
 											Basic networking and resources
 										</div>
-									</div>
+									</section>
 								</label>
 							</div>
 
 							<div class="radio-option">
 								<label>
 									<input type="radio" name="membership" value="Silver" />
-									<div>
+									<section>
 										<strong>Silver Membership</strong>
 										<div class="membership-feature">
 											Enhanced benefits and support
 										</div>
-									</div>
+									</section>
 								</label>
 							</div>
 
 							<div class="radio-option">
 								<label>
 									<input type="radio" name="membership" value="Gold" />
-									<div>
+									<section>
 										<strong>Gold Membership</strong>
 										<div class="membership-feature">Premium features</div>
-									</div>
+									</section>
 								</label>
 							</div>
 						</div>
