--- a/chamber/join.html
+++ b/chamber/join.html
@@ -285,13 +285,11 @@
 							</div>
 
 							<div class="radio-option">
-								<label>
-									<input type="radio" name="membership" value="Gold" />
-									<section>
-										<strong>Gold Membership</strong>
-										<div class="membership-feature">Premium features</div>
-									</section>
-								</label>
+								<label><strong>Gold Membership</strong></label>
+								<input type="radio" name="membership" value="Gold" />
+								<section>
+									<div class="membership-feature">Premium features</div>
+								</section>
 							</div>
 						</div>
 						<h3>More Info</h3>
