--- a/chamber/join.html
+++ b/chamber/join.html
@@ -251,43 +251,37 @@
 
 						<div class="radio-group">
 							<div class="radio-option">
-								<label>
+								<label><strong>NP Membership</strong></label>
+								<section>
 									<input type="radio" name="membership" value="NP" required />
-									<section>
-										<strong>NP Membership</strong>
-										<div class="membership-feature">No cost membership</div>
-									</section>
-								</label>
+									<div class="membership-feature">No cost membership</div>
+								</section>
 							</div>
 
 							<div class="radio-option">
-								<label>
+								<label><strong>Bronze Membership</strong></label>
+								<section>
 									<input type="radio" name="membership" value="Bronze" />
-									<section>
-										<strong>Bronze Membership</strong>
-										<div class="membership-feature">
-											Basic networking and resources
-										</div>
-									</section>
-								</label>
+									<div class="membership-feature">
+										Basic networking and resources
+									</div>
+								</section>
 							</div>
 
 							<div class="radio-option">
-								<label>
+								<label><strong>Silver Membership</strong></label>
+								<section>
 									<input type="radio" name="membership" value="Silver" />
-									<section>
-										<strong>Silver Membership</strong>
-										<div class="membership-feature">
-											Enhanced benefits and support
-										</div>
-									</section>
-								</label>
+									<div class="membership-feature">
+										Enhanced benefits and support
+									</div>
+								</section>
 							</div>
 
 							<div class="radio-option">
 								<label><strong>Gold Membership</strong></label>
-								<input type="radio" name="membership" value="Gold" />
 								<section>
+									<input type="radio" name="membership" value="Gold" />
 									<div class="membership-feature">Premium features</div>
 								</section>
 							</div>
