--- a/chamber/join.html
+++ b/chamber/join.html
@@ -196,7 +196,7 @@
 									>Mobile Phone <span class="required">*</span></label
 								>
 								<input
-									type="telephone"
+									type="tel"
 									id="phone"
 									name="phone"
 									required
