--- a/chamber/join.html
+++ b/chamber/join.html
@@ -17,7 +17,7 @@
 		/>
 		<meta
 			property="og:image"
-			content="https://flixjavier.github.io/wdd231/chamber/images/casas_grandes_letras"
+			content="https://flixjavier.github.io/wdd231/chamber/images/casas_grandes_letras.webp"
 		/>
 		<meta
 			property="og:url"
