--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -15,7 +15,7 @@
 			content="Webpage Chamber of Commerce of Casas Grandes City. Explore the culture and the magic representation of this great place">
 		<meta
 			property="og:image"
-			content="https://flixjavier.github.io/wdd231/chamber/images/casas_grandes_letras">
+			content="https://flixjavier.github.io/wdd231/chamber/images/casas_grandes_letras.webp">
 		<meta property="og:url" content="https://flixjavier.github.io/wdd231/chamber/index.html">
 		<meta
 			name="twitter:card"
