--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -2,45 +2,51 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" scontent="width=device-width, initial-scale=1.0">
+		<meta name="viewport" scontent="width=device-width, initial-scale=1.0" />
 		<title>Casas Grandes | Chamber Directory</title>
 		<meta
 			name="description"
-			content="Webpage Chamber of Commerce of Casas Grandes City. Explore the culture and the magic of this great place">
-		<meta name="author" content="Felix Flores">
-		<meta property="og:type" content="website">
-		<meta property="og:title" content="Casas Grandes | Chamber">
+			content="Webpage Chamber of Commerce of Casas Grandes City. Explore the culture and the magic of this great place"
+		/>
+		<meta name="author" content="Felix Flores" />
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Casas Grandes | Chamber" />
 		<meta
 			property="og:description"
-			content="Webpage Chamber of Commerce of Casas Grandes City. Explore the culture and the magic representation of this great place">
+			content="Webpage Chamber of Commerce of Casas Grandes City. Explore the culture and the magic representation of this great place"
+		/>
 		<meta
 			property="og:image"
-			content="https://flixjavier.github.io/wdd231/chamber/directory.html">
-		<meta property="og:url" content="https://flixjavier.github.io/wdd231/">
+			content="https://flixjavier.github.io/wdd231/chamber/images/casas_grandes_letras.webp"
+		/>
+		<meta property="og:url" content="https://flixjavier.github.io/wdd231/" />
 		<meta
 			name="twitter:card"
-			content="https://flixjavier.github.io/wdd231/chamber/directory.html">
+			content="https://flixjavier.github.io/wdd231/chamber/directory.html"
+		/>
 		<meta name="twitter:title" content="Casas Grandes | Chamber" />
 		<meta
 			name="twitter:image"
-			content="https://flixjavier.github.io/wdd231/chamber/directory.html">
-		<link rel="stylesheet" href="styles/normalize.css">
-		<link rel="stylesheet" href="styles/small.css">
-		<link rel="stylesheet" href="styles/large.css">
+			content="https://flixjavier.github.io/wdd231/chamber/directory.html"
+		/>
+		<link rel="stylesheet" href="styles/normalize.css" />
+		<link rel="stylesheet" href="styles/small.css" />
+		<link rel="stylesheet" href="styles/large.css" />
 
 		<!-- ADD FONTS -->
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Lobster&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-			rel="stylesheet">
-		<link rel="icon" href="images/casas_grandes_icon.ico" type="image/x-icon">
+			rel="stylesheet"
+		/>
+		<link rel="icon" href="images/casas_grandes_icon.ico" type="image/x-icon" />
 		<script src="scripts/base.mjs" type="module"></script>
 		<script src="scripts/display_cards.mjs" type="module"></script>
 	</head>
 	<body>
 		<header>
-			<img src="images/logo.svg" alt="Logo" width="44" height="44">
+			<img src="images/logo.svg" alt="Logo" width="44" height="44" />
 			<div>
 				<h1>Casas Grandes</h1>
 				<span>Chamber of Commerce</span>
@@ -70,7 +76,13 @@
 						>Join</a
 					>
 				</li>
-				<li><a href="https://flixjavier.github.io/wdd231/chamber/index.html" title="Discover">Discover</a></li>
+				<li>
+					<a
+						href="https://flixjavier.github.io/wdd231/chamber/index.html"
+						title="Discover"
+						>Discover</a
+					>
+				</li>
 			</ul>
 		</nav>
 		<main>
